- Quickstart now documents both GitHub workflows (`weftend_artifact_meter` and `weftend_verify360`) including managed verify command/output path.
- Release checklist now includes optional GitHub Actions parity runs for both workflows before publish.
- Release checklist now includes immutable-release change record checks (`CHANGELOG.md` and `docs/RELEASE_NOTES.txt` sync).
- Release announcement draft (`docs/RELEASE_ANNOUNCEMENT.txt`) refreshed to align with current adapter/verify/workflow scope.
- Release bundle sidecar set now includes `CHANGELOG.md` so immutable history is shipped with release uploads.
- `verify:360` docs-sync/etiquette coverage now includes `CHANGELOG.md` and release announcement references.
- `docs/GIT_POSTING_ETIQUETTE.md` now matches verify etiquette target set (includes `CHANGELOG.md`).
- 360 commit gate added:
- `npm run verify:360` now performs compile/test/proofcheck + deterministic replay + privacy lint + compare smoke.
- Gate now always writes evidence artifacts (`verify_360_receipt.json` and `verify_360_report.txt`) for PASS/PARTIAL/FAIL outcomes.
- Host precondition misses are explicit PARTIAL/SKIP evidence, not silent no-output aborts.
- Gate enforces docs/update discipline: code changes without operator-facing doc updates fail with `VERIFY360_DOC_SYNC_MISSING`.
- Gate now uses explicit state progression and two-phase output finalize (`stage -> finalize`) with `verify_360_output_manifest.json`.
- Gate now runs adapter maintenance doctor during verify (`adapter_doctor` step), with optional strict mode via `WEFTEND_360_ADAPTER_DOCTOR_STRICT=1` (strict failures are recorded as explicit PARTIAL evidence with reason codes).
- `verify:360` now captures adapter doctor output quietly (no raw doctor JSON console dump) while preserving step evidence in the verify receipt/report.
- Added `npm run verify:360:adapter:strict` helper for full verify runs with strict adapter doctor gating enabled.